--- a/docs/source/examples/breizhcrops_eopatch_data_analysis.ipynb
+++ b/docs/source/examples/breizhcrops_eopatch_data_analysis.ipynb
@@ -155,6 +155,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -592,6 +593,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -641,6 +643,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -835,36 +838,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/elena/anaconda3/envs/aitlas-py37/lib/python3.7/site-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
-      "  and should_run_async(code)\n"
-     ]
-    },
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"146.0805683141807\" height=\"100.0\" viewBox=\"554148.3655698339 5091132.258110921 146.0805683141807 24.11794865783304\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,10182288.634170499)\"><g><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"2.0\" opacity=\"0.6\" d=\"M 554154.664956178,5091148.76943771 L 554288.163311672,5091150.96566816 L 554289.035746729,5091137.66850234 L 554153.775961253,5091138.00557885 L 554154.664956178,5091148.76943771 z\" /></g></g></svg>"
-      ],
-      "text/plain": [
-       "<shapely.geometry.multipolygon.MultiPolygon at 0x7f02e4091ef0>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "eop.vector_timeless[\"CROP_TYPE_GDF\"].iloc[0].geometry"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
