--- a/docs/source/examples/semantic_segmentation_example_amazon_rainforest.ipynb
+++ b/docs/source/examples/semantic_segmentation_example_amazon_rainforest.ipynb
@@ -11,6 +11,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -30,6 +31,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -164,6 +166,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -202,6 +205,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -229,6 +233,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -250,6 +255,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -258,31 +264,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-10-30 19:26:10,490 INFO Loading checkpoint ./experiments/amazon_rainforest/checkpoint.pth.tar\n",
-      "2022-10-30 19:26:11,070 INFO Loaded checkpoint ./experiments/amazon_rainforest/checkpoint.pth.tar at epoch 51\n",
-      "testing on test set: 100%|████████████████████████████████████████████████████████████████| 4/4 [00:01<00:00,  3.04it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'IOU': 0.8720902532434759,\n",
-       "  'IOU mean': 0.8719951877410451,\n",
-       "  'IOU per Class': array([0.8760762 , 0.86791418])}]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_dataset_config = {\n",
     "    \"batch_size\": 4,\n",
@@ -305,6 +289,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
