--- a/docs/source/examples/semantic_segmentation_example_camvid.ipynb
+++ b/docs/source/examples/semantic_segmentation_example_camvid.ipynb
@@ -11,6 +11,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -30,6 +31,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -214,6 +216,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -259,6 +262,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -286,6 +290,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -308,6 +313,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -316,33 +322,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-10-31 16:10:50,405 INFO Loading checkpoint ./experiments/camvid/checkpoint.pth.tar\n",
-      "2022-10-31 16:10:51,042 INFO Loaded checkpoint ./experiments/camvid/checkpoint.pth.tar at epoch 101\n",
-      "testing on test set: 100%|██████████████████████████████████████████████████████████████| 59/59 [00:03<00:00, 19.19it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'IOU': 0.7961619357025409,\n",
-       "  'IOU mean': 0.55975493767852,\n",
-       "  'IOU per Class': array([0.90043398, 0.79625953, 0.06452442, 0.93402978, 0.7752441 ,\n",
-       "         0.73547835, 0.38352178, 0.28700126, 0.83897628, 0.41638008,\n",
-       "         0.26717429, 0.31803541])}]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_dataset_config = {\n",
     "    \"batch_size\": 4,\n",
@@ -365,6 +347,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
