--- a/docs/source/examples/semantic_segmentation_example_chactun.ipynb
+++ b/docs/source/examples/semantic_segmentation_example_chactun.ipynb
@@ -11,6 +11,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -30,6 +31,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -169,6 +171,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -205,6 +208,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -232,6 +236,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -253,6 +258,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -261,31 +267,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-10-31 12:09:18,030 INFO Loading checkpoint ./experiments/chactun/checkpoint.pth.tar\n",
-      "2022-10-31 12:09:18,701 INFO Loaded checkpoint ./experiments/chactun/checkpoint.pth.tar at epoch 51\n",
-      "testing on test set: 100%|██████████████████████████████████████████████████████████████| 83/83 [00:05<00:00, 16.38it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'IOU': 0.6857654440778834,\n",
-       "  'IOU mean': 0.6929769617711603,\n",
-       "  'IOU per Class': array([0.70656233, 0.69576405, 0.67660451])}]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_dataset_config = {\n",
     "    \"batch_size\": 4,\n",
@@ -308,6 +292,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
