--- a/docs/source/examples/semantic_segmentation_example_landcover_ai.ipynb
+++ b/docs/source/examples/semantic_segmentation_example_landcover_ai.ipynb
@@ -11,6 +11,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -30,6 +31,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -206,6 +208,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -253,6 +256,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -280,6 +284,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -304,6 +309,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -312,31 +318,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-10-30 21:16:14,989 INFO Loading checkpoint ./experiments/landcoverai/checkpoint.pth.tar\n",
-      "2022-10-30 21:16:15,288 INFO Loaded checkpoint ./experiments/landcoverai/checkpoint.pth.tar at epoch 21\n",
-      "testing on test set: 100%|████████████████████████████████████████████████████████████| 401/401 [00:11<00:00, 34.28it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'IOU': 0.9114360977667845,\n",
-       "  'IOU mean': 0.828794907732855,\n",
-       "  'IOU per Class': array([0.92565326, 0.75841971, 0.90626119, 0.92866128, 0.62497911])}]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_dataset_config = {\n",
     "    \"batch_size\": 4,\n",
@@ -359,6 +343,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
