--- a/docs/source/examples/semantic_segmentation_example_massachusetts_buildings.ipynb
+++ b/docs/source/examples/semantic_segmentation_example_massachusetts_buildings.ipynb
@@ -11,6 +11,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -30,6 +31,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -165,6 +167,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -213,6 +216,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -240,6 +244,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -264,6 +269,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -272,31 +278,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-10-30 23:27:41,541 INFO Loading checkpoint ./experiments/MassachusettsBuildings/checkpoint.pth.tar\n",
-      "2022-10-30 23:27:42,174 INFO Loaded checkpoint ./experiments/MassachusettsBuildings/checkpoint.pth.tar at epoch 34\n",
-      "testing on test set: 100%|██████████████████████████████████████████████████████████████| 23/23 [00:02<00:00, 11.12it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'IOU': 0.8637386979316553,\n",
-       "  'IOU mean': 0.7874153935547676,\n",
-       "  'IOU per Class': array([0.9147653 , 0.66006549])}]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_dataset_config = {\n",
     "    \"batch_size\": 4,\n",
@@ -320,6 +304,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
