--- a/examples/semantic_segmentation_example_gta-v-sid.ipynb
+++ b/examples/semantic_segmentation_example_gta-v-sid.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6550a423",
+   "metadata": {},
+   "source": [
+    "# Example of the aitlas toolbox in the context of image segmentation #"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eee500fa",
+   "metadata": {},
+   "source": [
+    "This notebook shows a sample implementation of a image segmentation using the aitlas toolbox."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49d6d60f",
+   "metadata": {},
+   "source": [
+    "## Import the required packages ##"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "cc4537e5-0108-464e-8c1c-fe82febb470a",
@@ -11,6 +35,14 @@
     "from aitlas.utils import image_loader\n",
     "from aitlas.models import DeepLabV3\n",
     "from aitlas.transforms import MinMaxNormTranspose"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c35cf8c",
+   "metadata": {},
+   "source": [
+    "## Visualize images and masks ##"
    ]
   },
   {
