Update notebook for kappaset_ai4qc
One import was missing

--- a/examples/semantic_segmentation_example_kappaset_ai4qc.ipynb
+++ b/examples/semantic_segmentation_example_kappaset_ai4qc.ipynb
@@ -23,6 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from aitlas.datasets import KappaSet_AI4QCDataset\n",
     "from aitlas.utils import image_loader\n",
     "from aitlas.models import DeepLabV3\n",
     "from aitlas.models import DeepLabV3_13_bands\n",
