--- a/examples/semantic_segmentation_example_uavid.ipynb
+++ b/examples/semantic_segmentation_example_uavid.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from aitlas.datasets.semantic_segmentation import SemanticSegmentationDataset\n",
+    "from aitlas.datasets import UAVidDataset\n",
     "from aitlas.utils import image_loader\n",
     "from aitlas.models import DeepLabV3\n",
     "from aitlas.transforms import MinMaxNormTranspose\n",
