--- a/examples/semantic_segmentation_example_gid15.ipynb
+++ b/examples/semantic_segmentation_example_gid15.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from aitlas.datasets.semantic_segmentation import SemanticSegmentationDataset\n",
+    "from aitlas.datasets import GID15Dataset\n",
     "from aitlas.utils import image_loader\n",
     "from aitlas.transforms import MinMaxNormTranspose\n",
     "from aitlas.transforms import ResizeToTensor\n",
